add mailing list info.

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 ** README for file(1) Command **
-@(#) $File: README,v 1.38 2008/02/05 19:53:16 christos Exp $
+@(#) $File: README,v 1.39 2008/02/14 20:22:20 christos Exp $
 
 E-mail: christos@astron.com
+Mailing List: file@mx.gw.com
 
 Phone: Do not even think of telephoning me about this program. Send cash first!
 
