Have exactly one CVS $File line in each .man file

--- a/doc/libmagic.man
+++ b/doc/libmagic.man
@@ -1,3 +1,4 @@
+.\" $File: libmagic.man,v 1.18 2008/02/28 22:24:46 rrt Exp $
 .\"
 .\" Copyright (c) Christos Zoulas 2003.
 .\" All Rights Reserved.
