--- a/doc/file.man
+++ b/doc/file.man
@@ -1,4 +1,4 @@
-.\" $File: file.man,v 1.72 2008/02/18 21:28:38 rrt Exp $
+.\" $File: file.man,v 1.73 2008/02/19 17:58:00 rrt Exp $
 .Dd February 19, 2008
 .Dt FILE __CSECTION__
 .Os
@@ -192,7 +192,7 @@ Don't look for fortran sequences inside ascii files.
 Don't consult magic files.
 .It tar
 Don't examine tar files.
-.It token
+.It tokens
 Don't look for known tokens inside ascii files.
 .It troff
 Don't look for troff sequences inside ascii files.
