remove obsolete excludes

--- a/doc/file.man
+++ b/doc/file.man
@@ -1,5 +1,5 @@
-.\" $File: file.man,v 1.73 2008/02/19 17:58:00 rrt Exp $
-.Dd February 19, 2008
+.\" $File: file.man,v 1.74 2008/10/09 17:19:11 christos Exp $
+.Dd October 9, 2008
 .Dt FILE __CSECTION__
 .Os
 .Sh NAME
@@ -186,16 +186,12 @@ Check for various types of ascii files.
 Don't look for, or inside compressed files.
 .It elf
 Don't print elf details.
-.It fortran
-Don't look for fortran sequences inside ascii files.
 .It soft
 Don't consult magic files.
 .It tar
 Don't examine tar files.
 .It tokens
 Don't look for known tokens inside ascii files.
-.It troff
-Don't look for troff sequences inside ascii files.
 .El
 .It Fl f , -files-from Ar namefile
 Read the names of the files to be examined from 
